pinentry memory leak
Closed, ResolvedPublic

Assigned To
Authored By
Jakuje
Jul 24 2024, 10:27 AM
Subscribers

Description

The static analysis noticed the memory leak on early error when handling dialogs with curses on early return. The attached patch creates new "release" function as suggested in the non-addressed todo comment and calls it in the right place before the early return.

Details

Version
master, 1.3.0